--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.lenis0012.bukkit</groupId>
+    <groupId>de.janmm14.com.lenis0012.bukkit</groupId>
     <artifactId>lenisutils</artifactId>
     <version>1.0.1</version>
     <name>lenis' utils</name>
