--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.lenis0012.bukkit</groupId>
+    <groupId>com.lenis0012.pluginutils</groupId>
     <artifactId>lenisutils</artifactId>
-    <version>1.2</version>
-    <name>lenis' utils</name>
-    <packaging>jar</packaging>
+    <version>2.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <properties>
+        <maven.compiler.release>11</maven.compiler.release>
+    </properties>
+
+    <modules>
+        <module>module-system</module>
+        <module>config</module>
+        <module>command</module>
+        <module>packet</module>
+    </modules>
 
     <repositories>
         <repository>
@@ -23,47 +33,10 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>1.8.8-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.8.8-R0.1-SNAPSHOT</version>
+            <version>1.17.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
-
-    <build>
-        <!-- Settings -->
-        <finalName>${project.artifactId}</finalName>
-        <defaultGoal>clean install</defaultGoal>
-
-        <!-- Include files inside resources directory -->
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-                <includes>
-                    <include>*</include>
-                </includes>
-            </resource>
-        </resources>
-
-        <!-- Plugins -->
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <showDeprecation>true</showDeprecation>
-                    <showWarnings>true</showWarnings>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
