--- a/task/pom.xml
+++ b/task/pom.xml
@@ -6,26 +6,18 @@
         <artifactId>lenisutils</artifactId>
         <groupId>com.lenis0012.pluginutils</groupId>
         <version>2.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>lenisutils-sql</artifactId>
+    <artifactId>lenisutils-task</artifactId>
 
     <dependencies>
-        <!-- SQL dependencies. Synced with craftbukkit 1.17.1 -->
         <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>3.34.0</version>
+            <groupId>net.md-5</groupId>
+            <artifactId>bungeecord-api</artifactId>
+            <version>1.16-R0.5-SNAPSHOT</version>
+            <type>jar</type>
             <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.49</version>
-            <scope>runtime</scope>
         </dependency>
     </dependencies>
 </project>
