--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <properties>
         <maven.compiler.release>8</maven.compiler.release>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <modules>
@@ -18,6 +19,7 @@
         <module>config</module>
         <module>command</module>
         <module>packet</module>
+        <module>sql</module>
     </modules>
 
     <repositories>
