[maven-release-plugin] prepare release v2.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
 
     <scm>
         <url>https://github.com/lenis0012/lenisutils</url>
-        <developerConnection>scm:git:ssh://git@github.com:lenis0012/lenisutils.git</developerConnection>
+        <developerConnection>scm:git:ssh://git@github.com/lenisutils.git</developerConnection>
       <tag>v2.0.0</tag>
   </scm>
 
