--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.lenis0012.pluginutils</groupId>
     <artifactId>lenisutils</artifactId>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -53,6 +53,8 @@
                 <version>3.0.0-M7</version>
                 <configuration>
                     <tagNameFormat>v@{project.version}</tagNameFormat>
+                    <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
+                    <username>lenis0012</username>
                 </configuration>
             </plugin>
             <plugin>
