--- a/sql/pom.xml
+++ b/sql/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.lenis0012.pluginutils</groupId>
         <artifactId>lenisutils</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>lenisutils-sql</artifactId>
