--- a/command/pom.xml
+++ b/command/pom.xml
@@ -17,5 +17,11 @@
             <version>${parent.version}</version>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>io.papermc.paper</groupId>
+            <artifactId>paper-api</artifactId>
+            <version>1.19.3-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
