--- a/packet/pom.xml
+++ b/packet/pom.xml
@@ -9,4 +9,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>lenisutils-packet</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+        </dependency>
+    </dependencies>
 </project>
