--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.lenis0012.pluginutils</groupId>
     <artifactId>lenisutils</artifactId>
-    <version>2.0.3-SNAPSHOT</version>
+    <version>2.1.0</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -87,7 +87,7 @@
     <scm>
         <url>https://github.com/lenis0012/lenisutils</url>
         <developerConnection>scm:git:ssh://git@github.com/lenisutils.git</developerConnection>
-        <tag>v2.0.2</tag>
+        <tag>v2.1.0</tag>
     </scm>
 
     <distributionManagement>
