fix: use correct spigot dependency

--- a/release.properties
+++ b/release.properties
@@ -1,25 +1,38 @@
 #release configuration
-#Sat Feb 11 08:34:04 CET 2023
+#Wed Feb 15 21:30:19 CET 2023
 projectVersionPolicyId=default
 project.scm.com.lenis0012.pluginutils\:lenisutils-sql.empty=true
 scm.branchCommitComment=@{prefix} prepare branch @{releaseLabel}
+project.rel.com.lenis0012.pluginutils\:lenisutils=2.1.0
 project.scm.com.lenis0012.pluginutils\:lenisutils.developerConnection=scm\:git\:ssh\://git@github.com/lenisutils.git
+project.dev.com.lenis0012.pluginutils\:lenisutils-command=2.1.1-SNAPSHOT
 pinExternals=false
-project.scm.com.lenis0012.pluginutils\:lenisutils.tag=v2.0.0
+project.scm.com.lenis0012.pluginutils\:lenisutils.tag=v2.0.2
+project.rel.com.lenis0012.pluginutils\:lenisutils-module-system=2.1.0
 pushChanges=false
+project.dev.com.lenis0012.pluginutils\:lenisutils-config=2.1.1-SNAPSHOT
 project.scm.com.lenis0012.pluginutils\:lenisutils-config.empty=true
-remoteTagging=true
 scm.rollbackCommitComment=@{prefix} rollback the release of @{releaseLabel}
+remoteTagging=true
 scm.commentPrefix=chore(release)\:
 releaseStrategyId=default
+project.dev.com.lenis0012.pluginutils\:lenisutils-module-system=2.1.1-SNAPSHOT
 project.scm.com.lenis0012.pluginutils\:lenisutils.url=https\://github.com/lenis0012/lenisutils
 project.scm.com.lenis0012.pluginutils\:lenisutils-module-system.empty=true
-completedPhase=check-poms
+project.rel.com.lenis0012.pluginutils\:lenisutils-command=2.1.0
+completedPhase=end-release
 scm.url=scm\:git\:ssh\://git@github.com/lenisutils.git
 scm.developmentCommitComment=@{prefix} prepare for next development iteration
+project.rel.com.lenis0012.pluginutils\:lenisutils-config=2.1.0
 project.scm.com.lenis0012.pluginutils\:lenisutils-command.empty=true
 scm.tagNameFormat=v@{project.version}
+project.rel.com.lenis0012.pluginutils\:lenisutils-packet=2.1.0
+project.rel.com.lenis0012.pluginutils\:lenisutils-sql=2.1.0
+project.dev.com.lenis0012.pluginutils\:lenisutils-packet=2.1.1-SNAPSHOT
+project.dev.com.lenis0012.pluginutils\:lenisutils-sql=2.1.1-SNAPSHOT
 project.scm.com.lenis0012.pluginutils\:lenisutils-packet.empty=true
+scm.tag=v2.1.0
+project.dev.com.lenis0012.pluginutils\:lenisutils=2.1.1-SNAPSHOT
 exec.snapshotReleasePluginAllowed=false
 scm.username=lenis0012
 preparationGoals=clean verify
