--- a/command/pom.xml
+++ b/command/pom.xml
@@ -18,10 +18,8 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>io.papermc.paper</groupId>
-            <artifactId>paper-api</artifactId>
-            <version>1.19.3-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
         </dependency>
     </dependencies>
 </project>
