--- a/pom.xml
+++ b/pom.xml
@@ -54,15 +54,18 @@
                 <version>3.10.1</version>
             </plugin>
             <plugin>
+                <groupId>com.smartling.cc4j</groupId>
+                <artifactId>conventional-commits-maven-plugin</artifactId>
+                <version>0.2.0</version>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>3.0.0-M7</version>
                 <configuration>
                     <tagNameFormat>v@{project.version}</tagNameFormat>
                     <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
-                    <username>lenis0012</username>
                     <scmCommentPrefix>chore(release): </scmCommentPrefix>
-                    <pushChanges>false</pushChanges>
                 </configuration>
             </plugin>
             <plugin>
