--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.lenis0012.pluginutils</groupId>
     <artifactId>lenisutils</artifactId>
-    <version>2.1.8-SNAPSHOT</version>
+    <version>2.1.9</version>
     <packaging>pom</packaging>
 
     <properties>
