--- a/sql/pom.xml
+++ b/sql/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.lenis0012.pluginutils</groupId>
         <artifactId>lenisutils</artifactId>
-        <version>2.1.9</version>
+        <version>2.1.9-SNAPSHOT</version>
     </parent>
 
     <artifactId>lenisutils-sql</artifactId>
