--- a/module-system/pom.xml
+++ b/module-system/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>lenisutils</artifactId>
         <groupId>com.lenis0012.pluginutils</groupId>
-        <version>2.1.10-SNAPSHOT</version>
+        <version>2.2.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
