--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>command</module>
         <module>packet</module>
         <module>sql</module>
+        <module>updater-api</module>
     </modules>
 
     <repositories>
