feat: add manifest updater

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>packet</module>
         <module>sql</module>
         <module>updater-api</module>
+        <module>updater-manifest</module>
     </modules>
 
     <repositories>
