--- a/updater-api/pom.xml
+++ b/updater-api/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.lenis0012.pluginutils</groupId>
         <artifactId>lenisutils</artifactId>
-        <version>2.3.4</version>
+        <version>2.3.5-SNAPSHOT</version>
     </parent>
 
     <artifactId>lenisutils-updater-api</artifactId>
