--- a/updater-manifest/pom.xml
+++ b/updater-manifest/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.lenis0012.pluginutils</groupId>
         <artifactId>lenisutils</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
     </parent>
 
     <artifactId>lenisutils-updater-manifest</artifactId>
